--- a/html/ticketInfo.html
+++ b/html/ticketInfo.html
@@ -5,14 +5,14 @@
 		<link rel="icon" href="../res/icons/technical-support-icon.ico" />
 		<link rel="stylesheet" type="text/css" href="../css/dashboard.css">
         <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">   
-        <script src="../js/jquery.min.js"></script>
-        <script src="../bootstrap/js/bootstrap.min.js"></script>
+        
+        <title>Ticket Info</title>
 	</head>
 
 	<body>
 	    <div id="wrapper">
 
-	    	<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+	    	<nav class="navbar navbar-default navbar-static-top" style="margin-bottom: 0">
 			  	<div class="container-fluid">
 			    	<div class="navbar-header">
 			      		<a class="navbar-brand">FRI Tech Support</a>
@@ -84,14 +84,14 @@
 		                        <li>
 		                        	<a href="#">
 		                        		<span class="glyphicon glyphicon-wrench"></span>
-		                        		<label class="iconLabel">Settings</label>
+		                        		<span class="iconLabel">Settings</span>
 		                        	</a>
 		                        </li>
 		                        <li class="divider"></li>
 		                        <li>
 		                        	<a href="../index.html">
 		                        		<span class="glyphicon glyphicon-log-out"></span>
-		                        		<label class="iconLabel">Logout</label>
+		                        		<span class="iconLabel">Logout</span>
 		                        	</a>
 		                        </li>
 		                    </ul>
@@ -116,13 +116,13 @@
 	                        <li>
 	                            <a href="dashboard.html">
 		                            <span class="glyphicon glyphicon-home"></span>
-		                            <label class="iconLabel">Dashboard</label>
+		                            <span class="iconLabel">Dashboard</span>
 	                            </a>
 	                        </li>
 	                        <li>
 	                            <a href="#">
 	                            	<span class="glyphicon glyphicon-tag"></span>
-		                            <label class="iconLabel">Tickets</label>
+		                            <span class="iconLabel">Tickets</span>
 		                            <div class="arrow">
 		                           		<span class="glyphicon glyphicon-chevron-left"></span>
 	                            	</div>
@@ -131,13 +131,13 @@
 	                                <li>
 	                                    <a href="newTicket.html">
 		                                    <span class="glyphicon glyphicon-plus"></span>
-			                            	<label class="iconLabel">New Ticket</label>
+			                            	<span class="iconLabel">New Ticket</span>
 	                                    </a>
 	                                </li>
 	                                <li>
 	                                    <a href="ticketHistory.html">
 											<span class="glyphicon glyphicon-time"></span>
-			                            	<label class="iconLabel">My Ticket History</label>
+			                            	<span class="iconLabel">My Ticket History</span>
 	                                    </a>
 	                                </li>
 	                            </ul>
@@ -146,7 +146,7 @@
 	                        <li>
 	                            <a href="help.html">
 	                            	<span class="glyphicon glyphicon-question-sign"></span>
-			                        <label class="iconLabel">Help</label>
+			                        <span class="iconLabel">Help</span>
 	                            </a>
 	                        </li>    
 	                    </ul>
@@ -162,11 +162,11 @@
 	    	<div class="panel panel-primary panel-news">
 				<div class="panel-heading">
 					<span class="glyphicon glyphicon-tag"></span>
-					<label class="iconLabel">#3</label>
+					<span class="iconLabel">#3</span>
 				</div>
 				<div class="panel-body">
 					<div class="">
-					  	<form role="form">
+					  	<form>
 						    <div class="form-group">
 						    	<label for="clientID">Client ID:</label>
 						    	<input type="number" class="form-control" id="clientID" placeholder="Enter client indetification number">
@@ -182,23 +182,23 @@
 						    </div>
 						    <div class="form-group">
 						    	<label for="assignedTo">Assigned to:</label>
-						    	<select class="form-control" id="status">
+						    	<select class="form-control" id="assignedTo">
 						    		<option>1st level support</option>
 						    		<option>2nd level support</option>
 						    	</select>
 						    </div>
 						    <div class="form-group">
-						    	<label for="issueTitle">Issue Title:</label>
+						    	<label>Issue Title:</label>
 						    	<input type="text" class="form-control" id="IssueTitle" placeholder="Address your issue">
 						    </div>
 						    <div class="form-group">
 						    	<label for="IssueDescription">Issue description:</label>
-						    	<textarea rows="10" type="text" class="form-control" 
+						    	<textarea rows="10" class="form-control" 
 						    	id="IssueDescription" placeholder="Carefully desribe your issue"></textarea>
 						    </div>
 						    <div class="form-group">
-						    	<label for="IssueSolution">Issue solution report:</label>
-						    	<textarea rows="10" type="text" class="form-control" 
+						    	<label>Issue solution report:</label>
+						    	<textarea rows="10" class="form-control" 
 						    	id="IssueSolution" placeholder="How was the issue resolved">Try restarting your computer</textarea>
 						    </div>
 						    <button style="float: right" type="submit" class="btn btn-primary">Update Ticket</button>
@@ -207,6 +207,11 @@
 				</div>
 			</div>
 	    </div>
+
+		<script src="../js/jquery.min.js"></script>
+    	<script src="../bootstrap/js/bootstrap.min.js"></script>
+
 	</body>
+
 
 </html>
