--- a/index.html
+++ b/index.html
@@ -4,20 +4,30 @@
 		<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
 		<link rel="icon" href="res/icons/technical-support-icon.ico" />
 		<link rel="stylesheet" type="text/css" href="css/login.css">
+		<link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Niconne' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Rancho' rel='stylesheet' type='text/css'>
+
+		<title>Login</title>
 	</head>
 	
-	<div class="company_logo">FRI Tech Support</div>
+	<body>
 
-	<form action="html/dashboard.html">
-		<div class="login-block">
-		    <h1>Login</h1>
-		    
-		    <input type="text" value="" placeholder="Username" id="username" />
-		    <input type="password" value="" placeholder="Password" id="password" />
-		    <button type="submit" name="userLogin" id="loginButton">Log me in</button>
-			<footer>Copyright &copy; 2015, Staš Hvala</footer>
-		</div>
-		
-	</form>
+		<div class="company_logo">FRI Tech Support</div>
+
+		<form action="html/dashboard.html">
+			<div class="login-block">
+			    <h1 class="login-font">Login</h1>
+			    
+			    <input type="text" value="" placeholder="Username" id="username" />
+			    <input type="password" value="" placeholder="Password" id="password" />
+			    <button type="submit" name="userLogin" id="loginButton">Log me in</button>
+				<footer>Copyright &copy; 2015, Staš Hvala</footer>
+			</div>
+			
+		</form>
+
+	</body>
+
 </html>
  
