--- a/html/ticketHistory.html
+++ b/html/ticketHistory.html
@@ -185,7 +185,7 @@
 									<div class="modal fade" id="richardSmithModal" role="dialog">
 										<div class="modal-dialog modal-sm" >
 										  	<div class="modal-content">
-											    <div class="modal-body" style="padding-bottom: 30px;">
+											    <div class="modal-body-user modal-body">
 											      	<img  src="../res/avatar/vangogh_avatar.jpg" alt="avatar" style="
 											      	  width:60px;height:75px;float: left;">
 
@@ -194,7 +194,8 @@
 														  	 &nbsp;&nbsp;Position: Software developer
 														 <br>&nbsp;&nbsp;Age: 32
 														 <br>&nbsp;&nbsp;Status: Experienced<br>
-														<button class="btn btn-sm" type="button" style="float: right">Send message</button>
+														 <br><hr>
+														<button class="btn btn-sm btn-snd-msg" type="button" style="float: right">Send message</button>
 													</div>
 											    </div>
 										 	</div>
